[package]
name = "banking_system"
version = "0.1.0"
edition = "2018"
authors = ["Garcia, Benjie Ben a.k.a 'void' <myemail@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"]}
serde_json = "1.0"